--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
 
 
 ### Posts ###
-permalink: /chysechoi.github.io/blog/:title
+permalink: /chysechoi.github.io/blog
 
 
 ### Collections ###
