--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 ### Site Settings ###
-title               : Chyselog
+title               : portfolYOU
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
                       and never broke production.
-baseurl             : "/chysechoi.github.io"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : chysechoi/chysechoi.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+baseurl             : "https://chysechoi.github.io/"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+repository          : YoussefRaafatNasry/portfolYOU     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 open_new_tab        : false                             # Opens external URLs in new tab (works for posts, projects and navbar only)
 
@@ -20,11 +20,12 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
+  - documentation/partials/**                           # For Documentation Only
 
 
 ### Author Info ###
 author:
-  name              : chysechoi
+  name              : John Doe
   image             : https://i.imgur.com/uyDNQnn.jpg
   behance           : your_username
 # dribbble          : your_username
@@ -48,15 +49,16 @@ author:
 
 
 ### Posts ###
-Posts:
-     permalink:/blog/:title
+permalink: /blog/:title
+
 
 ### Collections ###
 collections:
   projects:
     output: true
     permalink: /projects/:name
- 
+  elements:                                             # For Documentation Only
+    output: true                                        # For Documentation Only
 
 
 ### Disqus ###
@@ -75,10 +77,10 @@ analytics:
 # See https://www.buymeacoffee.com/
 buymeacoffee:
   enabled: false
-  username: chyse choi
+  username: your_username
   color: "#007bff"
   message: "Thank you for visiting."                    # Message to be displayed aside from the button for a few seconds.
-  description: 
+  description: "Support me on Buy me a coffee!"
 
 
 ### Defaults for collections ###
@@ -88,11 +90,16 @@ defaults:
       type: "projects"
     values:
       layout: "page"
+  - scope:                                              # For Documentation Only
+      path: ""                                          # For Documentation Only
+      type: "elements"                                  # For Documentation Only
+    values:                                             # For Documentation Only
+      layout: "element"                                 # For Documentation Only
   - scope:
       path: ""
       type: "posts"
     values:
-      comments: true                                 # Set to true to enable disqus comments
+      comments: false                                   # Set to true to enable disqus comments
 
 
 ### Exclude from processing ###
