--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
                       and never broke production.
-baseurl             :                      # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : ChyseChoi/ChyseChoi.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+baseurl             : # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+repository          : # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
-open_new_tab        : false                             # Opens external URLs in new tab (works for posts, projects and navbar only)
+open_new_tab        : true                            # Opens external URLs in new tab (works for posts, projects and navbar only)
 
 
 ### Plugins ###
@@ -22,9 +22,7 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - pages/blog.md
   - pages/projects.md
-  - documentation/partials/**                           # For Documentation Only
-
-
+  
 ### Author Info ###
 author:
   name              : John Doe
@@ -91,11 +89,6 @@ defaults:
       type: "projects"
     values:
       layout: "page"
-  - scope:                                              # For Documentation Only
-      path: ""                                          # For Documentation Only
-      type: "elements"                                  # For Documentation Only
-    values:                                             # For Documentation Only
-      layout: "element"                                 # For Documentation Only
   - scope:
       path: ""
       type: "posts"
