--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - pages/blog.md
   - pages/projects.md
+  - documentation/partials/**
   
 ### Author Info ###
 author:
