--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title               : portfolYOU
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
-                      and never broke production.
+                      ahihihihihi
 baseurl             : ""# Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : Chysechoi/ChyseChoi.github.io # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
