--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description         : >-
                       use tabs over spaces
                       ahihihihihi
 baseurl             : ""# Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : Chysechoi/ChyseChoi.github.io # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+repository          : ChyseChoi/ChyseChoi.github.io # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
-open_new_tab        : false                          # Opens external URLs in new tab (works for posts, projects and navbar only)
+open_new_tab        : true                          # Opens external URLs in new tab (works for posts, projects and navbar only)
 
 
 ### Plugins ###
@@ -22,8 +22,7 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - pages/blog.md
   - pages/projects.md
-  - documentation/partials/**
-  
+ 
 ### Author Info ###
 author:
   name              : John Doe
