Revert "Update _config.yml"
This reverts commit 7b6d89f8de21304f76e6a8db082e07de8089c53f.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : portfolYOU
 description         : >-
-                      I turn coffee :Pleasw: into code,
+                      I turn coffee :coffee: into code,
                       use tabs over spaces
                       ahihihihihi
 baseurl             : "https://chysechoi.github.io/" # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
