--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-:title               : portfolYOU
+title               : portfolYOU
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
@@ -49,7 +49,7 @@ author:
 
 
 ### Posts ###
-permalink:/blog/:title
+permalink: /blog/:title
 
 
 ### Collections ###
