--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : portfolYOU
 description         : >>-
-                      I turn coffee :coffee: into code,
+                      I turn coffee :coffee: ingugugu
                       use tabs over spaces
                       ahihihihihi
 baseurl             : "https://chysechoi.github.io/" # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
