--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### Site Settings ###
 title               : portfolYOU
-description         : >>-
+description         : >-
                       I turn coffee :coffee: ingugugu
                       use tabs over spaces
                       ahihihihihi
