--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : portfolYOU
 description         : >-
-                      I turn coffee :coffee: hello code,
+                      I turn coffee :coffee: hello bye code,
                       use tabs over spaces
                       and never broke production.
 baseurl             : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
