--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - pages/blog.md
+  - pages/blog.html
   - pages/about.html
-  - pages/projects.md
+  - pages/projects.html
   - documentation/partials/**                           # For Documentation Only
 
 
