--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - pages/blog.html
+  - pages/blog.md
   - pages/about.html
   - pages/projects.html
   - documentation/partials/**                           # For Documentation Only
